# ai-memory-hub

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-publish.yml
docs/: env-checklist.md  langgraph-integration.md  tech-doc.md
docs/dev-plan/: CHANGES-phase-1.md  CHANGES-phase-2.md  CHANGES-phase-3.md  CHANGES-phase-4.md  CHANGES-phase-5.md  phase-1-project-infra.md  phase-2-storage-layer.md  phase-3-embedding-llm.md  phase-4-memory-modules.md  phase-5-manager-integration.md  progress.md  review-report.md  test-report-phase-1.md  test-report-phase-2.md  test-report-phase-3.md  test-report-phase-4.md  test-report-phase-5.md
examples/: __init__.py  basic_usage.py  langgraph_basic.py
memory_agent/: __init__.py
memory_agent/core/: __init__.py  episodic_memory.py  manager.py  semantic_memory.py  working_memory.py
memory_agent/embedding/: __init__.py  local_embedder.py
memory_agent/llm/: __init__.py  deepseek_client.py
memory_agent/models/: __init__.py  consolidate_result.py  entity.py  episode.py  memory_item.py
memory_agent/storage/: __init__.py  chroma_store.py  in_memory_store.py
memory_agent/utils/: __init__.py  config.py  errors.py  logger.py
tests/: __init__.py  conftest.py  test_chroma_store.py  test_config.py  test_deepseek_client.py  test_embedder.py  test_episodic_memory.py  test_errors.py  test_in_memory_store.py  test_manager.py  test_models.py  test_semantic_memory.py  test_working_memory.py
